# A.I.R

./: .gitignore  CMakeLists.txt  readme.md
SDK/: CMakeLists.txt
SDK/CXX/PyInterpreter/: CMakeLists.txt  PyInterpreter.cpp  PyInterpreter.h  demo.cpp
SDK/CXX/extension/: CMakeLists.txt  ExtApp.cpp  ExtApp.h
UI/: AddMember.cpp  AddMember.h  AddMember.ui  AddMemberForm.cpp  AddMemberForm.h  AddMemberForm.ui  AddScore.cpp  AddScore.h  AddScore.ui  AddScoreForm.cpp  AddScoreForm.h  AddScoreForm.ui  ExportWindow.ui  FrameLessWindow.cpp  FrameLessWindow.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ScoreRanking.cpp  ScoreRanking.h  ScoreRanking.ui  res.qrc
UI/imgs/: 91_760_596.psd
app/: init.cpp  shell.cpp
app/Main/: Application.cpp  Application.h  main.cpp
data/: AIR.db  config.air
extension/CXX/addMembers/: CMakeLists.txt  Form.cpp  Form.h  Form.ui  MainWindow.cpp  MainWindow.h  info.ext  readme.md
extension/CXX/addScore/: CMakeLists.txt  Form.ui  MainWindow.cpp  MainWindow.h  main.cpp  readme.md
extension/CXX/scoreRanking/: MainWindow.cpp  MainWindow.h  MainWindow.ui  info.ext  main.cpp
extension/addMembers/: Form.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
extension/addScore/: Form.cpp  Form.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  info.ext  main.cpp
extension/export/: info.ext
extension/python/import/: info.ext
extension/scoreRanking/: MainWindow.cpp  main.cpp
modules/Core/: CMakeLists.txt  Core.cpp  Core.h
modules/DataBase/: CMakeLists.txt  Database.h  DatabaseSQLite.cpp  DatabaseSQLite.h
modules/ExtManager/: CMakeLists.txt  ExtManager.cpp  ExtManager.h
modules/PathManager/: CMakeLists.txt  PathManager.cpp  PathManager.h
modules/Tools/: CMakeLists.txt  Tools.cpp  Tools.hpp
modules/User/: CMakeLists.txt  User.cpp  User.h
scripts/: init.txt
scripts/py/: 2021届A.I.R机器人创意工作室成员信息表.xls  2112扣分记录表.xls  browser.py  export.pyw  import.pyw  import.spec
scripts/py/UI/: export_window.py  res_rc.py  ui_export_window.py
scripts/py/scripts/: export_window.ui  res.qrc
scripts/python/: export.pyw  import.pyw
scripts/python/DataBaseSqlite/: DataBaseSqlite.py
scripts/python/UI/: FrameLessWindow.py  export_window.py  import_window.py  ui_export_window.py  ui_import_window.py
scripts/python/scripts/: export_window.ui  import_window.ui
scripts/template/: A.I.R机器人创意工作室成员信息表模板.xls  积分变化记录表模板.xls
test/: extManagerTest.cpp
