set(Python3_DIR python)
find_package(Python3 COMPONENTS Interpreter Development)
if (${Python3_FOUND})
    include_directories(${Python3_INCLUDE_DIRS})
    message('bbb' ${Python3_LIBRARIES})
else()
    message(FATAL_ERROR "Python3 not found, please install it.")
endif()
add_executable(PyInterpreter PyInterpreter.cpp PyInterpreter.h demo.cpp)
target_link_libraries(PyInterpreter ${Python3_LIBRARIES})